# Blombly

./: .gitignore  .jace.yaml  .mango.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  bbreader.py  blombly  blombly.cpp  html.bb  lib.bb  lib.bbvm  linter.bb  linter.bbvm  main.bb  main.bbvm  main2bb  mkdocs.yaml  package-lock.json  problematic.bb  test.bb  test.bbvm  test.c  test.cpp  test.py  testjit  testjit.cpp
.VSCodeCounter/2024-05-14_12-28-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: build-and-release.yml  release.yml
benchmarks/: benchtest.bb  benchtest.bbvm  parallel.bb  parallel.bbvm  slow.bb  slow.bbvm
benchmarks/factorial/: main.bb  main.bbvm
benchmarks/lists/: push.bb  push.bbvm  push.py
benchmarks/vectors/: benchtest.bb  benchtest.bbvm  competing.cpp  numpyimpl.py  parallel.bb  parallel.bbvm  pyth.py  slow.bb  slow.bbvm
blombly-lsp/: blombly-lsp-0.0.1.vsix  extension.js  lsp.py  package-lock.json  package.json  utils.py
docs/: assembly.md  calling-blocks.html  code-blocks-inline.html  control-flow.html  demo.html  downloads.md  errors.html  executions.md  guide.md  hello-world.html  index.html  index.md  introduction.html  keywords.md  overloading.html  preprocessor.html  prism-bbvm.min.js  prism-java.min.js  prism.css  requirements.txt  return-from-new.html  setup.md  structs.html  style.css  success-fail.html  syntax.md  vars-operations-comments.html
docs/advanced/: libraries.md  libs.md  preprocessor.md  semitypes.md  servers.md  signals.md  try.md
docs/basics/: blocks.md  builtins.md  files.md  io.md  iterables.md  structs.md
docs/css/: extra.css
docs/material/: concurrency.md  design.md  keywords.md  minimization.md  style.md  typeless.md
docs/posts/: optimizing.md
examples/: binsearch.bb  binsearch.bbvm  fib.bb  fib.bbvm  fibonacci.bbvm  fibonacci_dynamic.bb  fibonacci_dynamic.bbvm  fibonacci_recursion.bb  fibonacci_recursion.bbvm  finals.bbvm  funcsync.bbvm  functional_synchronization.bb  functional_synchronization.bbvm  multiinheritance.bb  multiinheritance_dynamic.bb  multiinheritance_dynamic.bbvm  multiinheritance_static.bb  overloading.bb  parallel.bb  recursion.bbvm
examples/benchmarks/factorial/: factorial.py  main.bbvm
examples/benchmarks/lists/: push.bbvm  push.py
examples/benchmarks/vectors/: parallel.bb  slow.bbvm
examples/concepts/: arithmetics.bb  arithmetics.bbvm  finals.bb  finals.bbvm  funcsync.bbvm  multiinheritance.bb  multiinheritance.bbvm  overloading.bb  overloading.bbvm  transfer_method.bb  transfer_method.bbvm
examples/demos/: binsearch.bb  binsearch.bbvm  constuctors.bb  constuctors.bbvm  fibonacci.bbvm  inlinerecursion.bb  inlinerecursion.bbvm  recursion.bb  recursion.bbvm  recursion.py
examples/fib/: fib.bbvm  fib.py
examples/list/: list.bb  list.bbvm  list.py
examples/playground/: main.py  mylib.bb
include/: BFloat.h  BMemory.h  BString.h  Boolean.h  Code.h  Data.h  Float.h  Future.h  Integer.h  Iterator.h  List.h  Memory.h  Result.h  Vector.h  common.h  utils.h
include/data/: BError.h  BFile.h  BFloat.h  BHashMap.h  BString.h  Boolean.h  Code.h  Data.h  Database.h  Future.h  Graphics.h  Integer.h  Iterator.h  Jitable.h  List.h  RestServer.h  Struct.h  Vector.h
include/interpreter/: Command.h  functional.h  thread.h
include/tsl/: hopscotch_hash.h  robin_hash.h
libs/: .bb  ansi.bb  collections.bb  console.bb  dict.bb  docfmt.bb  docs.bb  env.bb  err.bb  flat.bb  fmt.bb  html.bb  json.bb  licenses.txt  logger.bb  loop.bb  monad.bb  numbers.bb  plot.bb  symb.bb  sync.bb  tests.bb  thread.bb
libs/def/: .bb  class.bb  fn.bb
libs/experimental/: .bb  console.bb  dict.bb  docfmt.bb  env.bb  loop.bb  math.bb  numbers.bb  symb.bb  thread.bb  type.bb
libs/experimental/final/: class.bb  fn.bb
libs/final/: .bb  fn.bb
libs/locale/: br.bb  de.bb  fr.bb  gr.bb  it.bb  po.bb  sp.bb
libs/oop/: .bb  class.bb  fn.bb
libs/std/: .bb  dict.bb  loop.bb  oop.bb
libs/std/oop/: .bb  class.bb  fn.bb
playground/: analysis.py  babytest.bb  bench.bb  bench.bbvm  brute.bb  buildexample.bb  concats.py  db.bb  db.bbvm  db.py  fib.bb  fib.bbvm  fib.py  ftp.bb  gather.bb  get.bb  hello.bb  jsonparser.bb  jsontest.json  listopt.bb  locale_gr.bb  main.bb  main.bbvm  nodeadlock.bb  quick.bb  quick.py  searches.py  server.bb  sort.bb  sort.bbvm  string.bb  test.bb  test.bbvm  test.py  testinc.bb  testincinvalid1.bb  testincinvalid2.bb  testincinvalid3.bb  testinclude.bb  types.bb  (+1 more)
playground/examples/: ackerman.bb  ackerman.py  bench.bb  brute.bb  brute.py  cache_compression.bb  concats.bb  db.bb  errfail.bb  fib.bb  ftp.bb  gather.bb  get.bb  graphics.bb  graphics_simple.bb  inf.bb  plot.bb  raii.bb  searches.bb  server.bb  todoapp.bb  vec.bb  vec.py
playground/tooling/: linter.bb  linter.bbvm
src/: bfloat.cpp  bmemory.cpp  boolean.cpp  bstring.cpp  code.cpp  common.cpp  data.cpp  float.cpp  future.cpp  integer.cpp  iterator.cpp  list.cpp  memory.cpp  result.cpp  vector.cpp
src/data/: berror.cpp  bfile.cpp  bfloat.cpp  boolean.cpp  bstring.cpp  code.cpp  data.cpp  database.cpp  future.cpp  graphics.cpp  hashmap.cpp  integer.cpp  iterator.cpp  jitable.cpp  list.cpp  rest_server.cpp  struct.cpp  vector.cpp
src/interpreter/: command.cpp  thread.cpp  vm.cpp
src/interpreter/functional/: error_handling.cpp  execute_block.cpp  handle_command.cpp  numfmt.cpp
src/utils/: cross_platform.cpp  optimizer.cpp  parser.cpp  stringtrim.cpp  tokenizer.cpp  transpiler.cpp
std/: .bb  dict.bb  fmt.bb  loop.bb  oop.bb
tests/: all.bb  all.bbvm  atomicity.bb  calls.bb  clear.bb  closure.bb  collection.bb  concat.bb  database.bb  default.bb  errors.bb  flat.bb  gather.bb  iter.bb  list.bb  list_iter.bb  list_iter.bbvm  map.bb  move.bb  nodeadlock.bb  overload.bb  raii.bb  range.bb  sideerrors.bb  string.bb  strings.bb  vector.bb  vfs.bb
utils/: builtins.cpp  optimizer.cpp  parser.cpp  parser2.cpp  stringtrim.cpp  threadpool.cpp  tokenizer.cpp
